// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v0;

message LocalReject {
  enum Code {
    MissingCode = 0;
    LockedContracts = 1;
    LockedKeys = 2;
    InactiveContracts = 3;
    DuplicateKey = 4;
    CreatesExistingContract = 5;
    LedgerTime = 6;
    SubmissionTime = 7;
    LocalTimeout = 8;
    MalformedPayloads = 9;
    MalformedModel = 10;
    MalformedConfirmationPolicy = 11;
    BadRootHashMessage = 12;
    TransferOutActivenessCheck = 13;
    TransferInAlreadyCompleted = 14;
    TransferInAlreadyActive = 15;
    TransferInAlreadyArchived = 16;
    TransferInLocked = 17;
    InconsistentKey = 18;
  }
}
